@@ -610,3 +610,8 @@ Other Changes
 * Only raise ``not-callable`` when all the inferred values of a property are not callable.
 
   Closes #5931
+
+* Fix a crash when linting a file that passes an integer ``mode=`` to
+  ``open``
+
+  Closes #6414
