@@ -230,6 +230,16 @@ Release date: TBA
   (Ie. not necessarily at the end)
 
 
+What's New in Pylint 2.13.8?
+============================
+Release date: TBA
+
+* Fix a crash when linting a file that passes an integer ``mode=`` to
+  ``open``
+
+  Closes #6414
+
+
 What's New in Pylint 2.13.7?
 ============================
 Release date: 2022-04-20
